<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:gravity="center"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/RPimageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_description"
            app:srcCompat="@drawable/unnamed"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="25sp"
                android:text="@string/Title" />

            <TextView
                android:id="@+id/textViewSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Subtitle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/buttonC322"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/C322_text"
            app:backgroundTint="#C26DD1"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/buttonC346"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/C346_text"
            app:backgroundTint="#C26DD1"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/buttonC382"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/C382_text"
            app:backgroundTint="#C26DD1"
            app:cornerRadius="@android:dimen/app_icon_size" />
    </LinearLayout>

</LinearLayout>
